<pre>
2007-xx-xx:
	* version 0.6
	* the URL in the status line can be selected with the mouse again
	* commandline history now works properly on Windows
	* filename completion now works on Windows
	* fixed search for :open (previously needed to do :o <tab> ONCE to initialize them)
	* added :set {option}! support to toggle a boolean option's value
	* added :set all and :set all& support to show the current value of all
	  options and to reset all options to their default value
	* :tabmove! wrapping works again

2007-08-16:
	* version 0.5
	* :map support (also :noremap, :unmap)
	* :bmarks and :history now use the multiline message window for output
	* rename :bm, :bmadd, and :bmdel to :bmarks, :bmark, and :delbmarks respectively
	* new :normal command
	* the command line keeps focus now, even when clicking outside of it
	* vimperator.events.feedkeys("2zi") support for scripts
	* Ctrl-U/Ctrl-D for scrolling the window up/down and the associated
	'scroll' option
	* files in ~/.vimperator/plugin/ are auto-sourced
	* :winopen support (multiple windows still very very experimental)
	* 'activate' option implemented
	* search engines which use POST instead of GET work now
	* :javascript <<EOF uses a better multiline input widget now
	* new :map, :noremap, :mapclear and :unmap commands
	* :saveas finally works (by calmar)
	* Shift-insert pastes the X11 selection content in text fields now
	* Changed "|" to ", " as a url seperator in :open
	* Ctrl-^ mapping for selecting the alternate tab/buffer
	* QuickMarks support (new commands :qmark/:qmarks/:delqmarks and
	  mappings go{a-z}, gn{a-z} and M{a-z}
	* Multiline echo support
	* Command line is now cleared on most redraws like in vim
	* The RSS feed button in the address bar works again
	* reload/stop buttons update enabled state again
	* added local/url marks support (thanks Viktor Kojouharov)
	* temporary shortcut Y to yank current selection (for non X11-users)
	* Flashing frame with ]f now works as expected