@@ -28,7 +28,7 @@ table.vimperator {
     border-width: 1px;
     border-style: dotted;
     border-color: gray;
-    margin-bottom: 2em; /* FIXME: just a quick hack until we have proper pages */
+    /*margin-bottom: 2em; /* FIXME: just a quick hack until we have proper pages */
 }
 table.vimperator td {
     border-width: 0px;
