@@ -1,6 +1,7 @@
 <pre>
 2007-xx-xx:
 	* version 0.6
+	* native / and ? search and n and N working again
 	* the URL in the status line can be selected with the mouse again
 	* commandline history now works properly on Windows
 	* filename completion now works on Windows
